--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,11 +8,21 @@ asgiref==3.7.2
     # via django
 backports-zoneinfo==0.2.1
     # via django
+dj-database-url==2.0.0
+    # via -r src/requirements/requirements.in
 django==4.2
+    # via
+    #   -r src/requirements/requirements.in
+    #   dj-database-url
+pillow==9.5.0
     # via -r src/requirements/requirements.in
 psycopg2==2.9.6
+    # via -r src/requirements/requirements.in
+python-decouple==3.8
     # via -r src/requirements/requirements.in
 sqlparse==0.4.4
     # via django
 typing-extensions==4.6.3
-    # via asgiref
+    # via
+    #   asgiref
+    #   dj-database-url
